--- a/index.html
+++ b/index.html
@@ -53,37 +53,11 @@
 		
 		<div class="contenedor_index-fondo flex_index">
 			<h1 class="text-center">MARILYN MANSON</h1>
-			<p >
-			La banda nace en 1989, cuando Marilyn Manson conoce a Scott Putesky. Ambos se pusieron de acuerdo en los ideales del grupo, asustar y criticar a la sociedad americana resaltando todos los tabúes. En el dúo Manson componía y cantaba y Daisy se ocupaba de los ritmos y efectos con un teclado Yamaha RX8, y las guitarras. Meat Beat Cleaver Beat, una especie de maqueta de coleccionistas y que también está en algunos CD's piratas recoge esos primeros pasos del grupo.</p>
+			<p class="texto-p">
+				Cantante estadounidense conocido por su provocativa música y su controvertido estilo escénico. Vendió millones de discos en todo el mundo y ha sido una provocadora presencia en la industria musical durante años. Entre sus álbumes aparecen Portrait of an American Family (1994), 
+				Antichrist Superstar (1996) y Mechanical Animals (1998), que le dieron relevancia en los principales medios de comunicación gracias a su figura impactante y a su influencia negativa. Aunque tuvo una carrera larga y exitosa, también recibió duras críticas por su mensaje y comportamiento en los escenarios.</p>
 
-			<p>Al grupo se une el bajista Brian Tutunick que era peluquero, y el teclista Zsa Zsa Speck, en lo que empezaba ser una ida y vuelta contínua de músicos.</p>
-
-			<p>El grupo va adquiriendo popularidad con las dotes de Manson para el espectáculo, creaba carteles publicitarios, e impresionaba en sus shows con grandes dosis de sexo, chicas crucificadas, fuego, animales vivos...</p>
-
-			<p>En 1994 el grupo logra grabar, no sin dificultades su primer disco Portrait of an American Family. Entra en escena el nuevo batería, Kenny Wilson, bautizado con el nombre de Ginger Fish, para sustituir a Sarah Lee Lucas que no encajaba en la banda.</p>
-
-			<p>Smells Like Children, sale en 1995, se trata de un EP que contenía una versión del Smells Like Teen Spirit, y el Sweet Dreams, el nombre de Marilyn Manson comenzaba a sonar con fuerza.</p>
-
-			<p>1996 ve el lanzamiento de Antichrist Superstar, un disco complicado por el momento del grupo por la adicción a las drogas y los vaivenes de la banda; de todas formas el disco tiene una repercusión fuera de toda discusión, se venden más de 13 millones de discos.</p>
-
-			<p>En 1998 sigue la meteórica carrera musical con Mechanical Animals, que pese a no tener el éxito del anterior vende nada menos que 6 millones de discos, muchos más de los que venderían con Holy Wood (2000). Tras muchos retrasos en 2003 sale por fin, el séptimo disco The golden age of grotesque con el que vuelve a situarse en la cima.</p>
-
-			<p>En 2004 llega, Lest we forget, the best of..., la obra definitiva de un personaje único del panorama actual. Un cuidado documento en formato CD y DVD que recopila lo mejor del reverendo, y con una versión del Personal Jesus de Depeche Mode, como primer single.</p>
-
-			<h2>Curiosidades:</h2>
-			<p>
-			Según la tradición y los ideales del grupo, cada integrante debe llevar un pseudónimo encabezado por el nombre de una mujer Famosa y el apellido de un asesino o criminal conocido. Así:</p>
-
-			<p>Brian Warner (Vocalista) : Marilyn Manson, Marilyn Monroe + Charles Manson
-				Jeordie White (Bajista) : Twiggy Ramírez, Twiggy + Richard Ramírez
-				Steve Bier (Sampleador, Teclados) : Madonna Wayne Gacy, Madonna + John Wayne Gacy
-				Frank Wilson (Batería) : Ginger Fish, Ginger Rogers + Albert Fish
-				Scott Mitchell Puttesky (Ex Guitarrista) => Daisy Berkowitz, Daisy Duke + David Berkowitz
-				Olivia Newton Bundy, Olivia Newton John + Ted Bundy
-				Zsa Zsa Speck, Zsa Zsa Gabor + Richard Speck
-			Brad Steward : Gidget Gein, Gidget + Ed Gein</p>
-
-			<p>En el caso de Mike Yip : Zim Zum, Según la biblia fué el Ángel que le hacía el trabajo sucio a Dios cuando el mundo todavía no estaba creado. John Lowery : John 5, John por su nombre de pila y 5 por ser el quinto integrante nuevo en la banda.</p>
+			
 		</div>
 
 	</main>
